--- a/package.json
+++ b/package.json
@@ -9,21 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconify/react": "^5.2.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/mdx": "^15.2.4",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@rehype-pretty/transformers": "^0.13.2",
+    "@tiptap/extension-highlight": "^2.11.7",
+    "@tiptap/extension-image": "^2.11.7",
+    "@tiptap/extension-text-align": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "framer-motion": "^11.3.31",
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.1.15",
+    "html-to-draftjs": "^1.5.0",
+    "iconify": "^1.4.0",
     "lucide-react": "^0.438.0",
-    "next": "14.2.7",
+    "mysql": "^2.18.1",
+    "next": "^15.2.4",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-quill": "^2.0.0",
     "react-top-loading-bar": "^2.3.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-document": "^7.0.3",
@@ -37,7 +60,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "typed.js": "^2.1.0",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
