Final Push for production deployment

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "draft-js": "^0.11.7",
@@ -41,7 +42,10 @@
     "iconify": "^1.4.0",
     "lucide-react": "^0.438.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.14.0",
+    "nanoid": "^5.1.5",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
