Login also done

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL="mysql://root:8008@localhost:3306/portfolio"
 NEXT_PUBLIC_API_BASE_URL="http://localhost:3000"
+NEXTAUTH_SECRET=f6UEud2XGaTapyqX2eBZo9/BBP7x+c1JSLMqp25csng=
